Fixed error in INSTALL file.

--- a/INSTALL
+++ b/INSTALL
@@ -3,4 +3,4 @@ Installing lxrt-comedi
 
 To install run "make install" as root 
 
-To remove run "mak uninstall" as root 
+To remove run "make uninstall" as root 
