Modified README file.

--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 lxrt-comedi
 ===========
 
-lxrt-comedi is a bash script which inserts the hard real-time RTAI lxrt
-modules as well as the comedi data acquisition modules. 
+lxrt-comedi is a bash script which inserts and removes the hard
+real-time RTAI lxrt modules as well as the comedi data acquisition
+modules.
 
 Usage:
  
